<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/background_gradient" />

    <TextView
        android:id="@+id/song"
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableLeft="@drawable/baseline_audiotrack_white_36"
        android:drawablePadding="@dimen/verticalPadding"
        android:drawableStart="@drawable/baseline_audiotrack_white_36"
        android:padding="@dimen/verticalPadding"
        android:text="@string/category_songs" />

    <TextView
        android:id="@+id/playlist"
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableLeft="@drawable/baseline_library_music_white_36"
        android:drawablePadding="@dimen/verticalPadding"
        android:drawableStart="@drawable/baseline_library_music_white_36"
        android:padding="@dimen/verticalPadding"
        android:text="@string/category_playlist" />

    <TextView
        android:id="@+id/album"
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableLeft="@drawable/baseline_album_white_36"
        android:drawablePadding="@dimen/verticalPadding"
        android:drawableStart="@drawable/baseline_album_white_36"
        android:padding="@dimen/verticalPadding"
        android:text="@string/category_albums" />


    <TextView
        android:id="@+id/artist"
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableLeft="@drawable/baseline_recent_actors_white_36"
        android:drawablePadding="@dimen/verticalPadding"
        android:drawableStart="@drawable/baseline_recent_actors_white_36"
        android:padding="@dimen/verticalPadding"
        android:text="@string/category_artists" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/verticalPadding">

        <ImageButton
            android:id="@+id/previous_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBlack"
            android:contentDescription="@string/previous_image_button"
            android:src="@drawable/baseline_skip_previous_white_48" />

        <ImageButton
            android:id="@+id/play_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/colorBlack"
            android:contentDescription="@string/play_image_button"
            android:src="@drawable/baseline_play_circle_outline_white_48" />

        <ImageButton
            android:id="@+id/next_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBlack"
            android:contentDescription="@string/next_image_button"

            android:src="@drawable/baseline_skip_next_white_48" />
    </LinearLayout>

</LinearLayout>